--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -4,8 +4,10 @@ body {
 }
 
 main {
-    padding: 1.5%;
+    padding: 2rem;
 }
+
+/* NAVBAR */
 
 .navbar{
     display: flex;
@@ -35,4 +37,35 @@ nav ul.navbar-list li a {
     text-decoration: none;
     color: black;
     padding: 10px;
+}
+
+.introduction {
+    display: flex;
+    flex-direction: row;
+}
+
+.intro-text {
+    width: 40%;
+    float: left;
+}
+.intro-icon {
+    float: right;
+    max-width: 60%; 
+    height: auto;
+}
+
+.github-link {
+    font-size: 20px;
+    font-style: normal;
+    color: black;
+    border-bottom: 1px solid transparent;
+    transition: 450ms ease;
+}
+
+a.github-link:link {
+    text-decoration: none;
+}
+a.github-link:hover {
+    border-color: rgba(0,0,0,0.7);  
+    opacity: 0.7;   
 }
