--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -161,6 +161,11 @@
   .about-me-para {
     font-size: 20px;
     margin-bottom: 28px;
+    text-align: center;
+  }
+
+  .about-me-para a {
+    margin: 0;
   }
   
   .about-me-link {
@@ -291,6 +296,12 @@
     width: 100%;
     transition: all 500ms ease;
   }
+
+  .twitch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
   .project-wrapper {
     box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
@@ -298,7 +309,6 @@
     overflow: hidden;
     display: flex;
     position: relative;
-  
   }
   
   
